src/StlAPI/StlAPI_Writer.hxx
@@ -22,6 +22,7 @@
 #include <Standard_Handle.hxx>
 #include <Standard_Boolean.hxx>
 #include <Standard_CString.hxx>
+#include <Message_ProgressIndicator.hxx>
 
 class TopoDS_Shape;
 
@@ -45,7 +46,8 @@ public:
   //! Converts a given shape to STL format and writes it to file with a given filename.
   //! \return the error state.
   Standard_EXPORT Standard_Boolean Write (const TopoDS_Shape& theShape,
-                                          const Standard_CString theFileName);
+                                          const Standard_CString theFileName,
+                                          const Handle(Message_ProgressIndicator)& theProgress = NULL);
 
 private:
   Standard_Boolean myASCIIMode;
